<p:ajax ... resetValues="true"/> added

--- a/crypfolio/web/faces/watchlist.xhtml
+++ b/crypfolio/web/faces/watchlist.xhtml
@@ -248,7 +248,7 @@
 
             </h:form>
 
-            <p:ajax event="close" listener="#{watchlistBacking.destroy}" update="formWatchAddCoin"/>
+            <p:ajax event="close" listener="#{watchlistBacking.destroy}" update="formWatchAddCoin" resetValues="true"/>
 
         </p:dialog>
     </div>
