CalendarLocalDateConverter for p:calendar Date (String) <-> LocalDate conversions

--- a/crypfolio/web/faces/portfolio.xhtml
+++ b/crypfolio/web/faces/portfolio.xhtml
@@ -125,7 +125,7 @@
                       sortBy="#{itemEntity.coin.name}">
 
                 <h:outputText id="watchCoinPrice5"
-                              value="fuck"/>
+                              value="UPD"/>
 
             </p:column>
 
@@ -133,7 +133,7 @@
                       sortBy="#{itemEntity.coin.name}">
 
                 <h:outputText id="watchCoinPrice6"
-                              value="fuck"/>
+                              value="UPD"/>
 
             </p:column>
 
@@ -141,7 +141,7 @@
                       sortBy="#{itemEntity.coin.name}">
 
                 <h:outputText id="watchCoinPrice7"
-                              value="fuck"/>
+                              value="UPD"/>
 
             </p:column>
 
@@ -149,7 +149,7 @@
                       sortBy="#{itemEntity.coin.name}">
 
                 <h:outputText id="watchCoinPrice8"
-                              value="fuck"/>
+                              value="UPD"/>
 
             </p:column>
 
